k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app-mba
  labels:
    name: demo-app-mba
