k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-api-ingress
  namespace: demo-app-mba
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: app-api.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-api-service
                port:
                  number: 8000
